// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BOOTSTRAP command executes the correct \`yarn link\`s and \`yarn install\`s 1`] = `
Array [
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install",
    Object {
      "cwd": "test/fixtures/packages/oao",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install",
    Object {
      "cwd": ".",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-c",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-c",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
]
`;

exports[`BOOTSTRAP command executes the correct \`yarn link\`s and \`yarn install\`s in production 1`] = `
Array [
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --production",
    Object {
      "cwd": "test/fixtures/packages/oao",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --production",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --production",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --production",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --production",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --production",
    Object {
      "cwd": ".",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
]
`;

exports[`BOOTSTRAP command executes the correct \`yarn link\`s and \`yarn install\`s with --frozen-lockfile 1`] = `
Array [
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --frozen-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --frozen-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --frozen-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --frozen-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --frozen-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --frozen-lockfile",
    Object {
      "cwd": ".",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-c",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-c",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
]
`;

exports[`BOOTSTRAP command executes the correct \`yarn link\`s and \`yarn install\`s with --no-lockfile 1`] = `
Array [
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --no-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --no-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --no-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --no-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --no-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --no-lockfile",
    Object {
      "cwd": ".",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-c",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-c",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
]
`;

exports[`BOOTSTRAP command executes the correct \`yarn link\`s and \`yarn install\`s with --pure-lockfile 1`] = `
Array [
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --pure-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --pure-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --pure-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --pure-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --pure-lockfile",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install --pure-lockfile",
    Object {
      "cwd": ".",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-c",
    Object {
      "cwd": "test/fixtures/packages/oao-d",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-c",
    Object {
      "cwd": "test/fixtures/packages/oao-priv",
      "logLevel": "trace",
    },
  ],
]
`;

exports[`BOOTSTRAP command executes the correct \`yarn link\`s and \`yarn install\`s with custom links 1`] = `
Array [
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packagesCustomLinks/oao",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install",
    Object {
      "cwd": "test/fixtures/packagesCustomLinks/oao",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packagesCustomLinks/oao-b",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install",
    Object {
      "cwd": "test/fixtures/packagesCustomLinks/oao-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packagesCustomLinks/oao-c",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install",
    Object {
      "cwd": "test/fixtures/packagesCustomLinks/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install",
    Object {
      "cwd": ".",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packagesCustomLinks/oao-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link ext-one",
    Object {
      "cwd": "test/fixtures/packagesCustomLinks/oao-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao",
    Object {
      "cwd": "test/fixtures/packagesCustomLinks/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link ext-one",
    Object {
      "cwd": "test/fixtures/packagesCustomLinks/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packagesCustomLinks/oao-c",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link ext-two",
    Object {
      "cwd": "test/fixtures/packagesCustomLinks/oao-c",
      "logLevel": "trace",
    },
  ],
]
`;

exports[`BOOTSTRAP command supports scoped packages 1`] = `
Array [
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packagesScoped/example-package",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install",
    Object {
      "cwd": "test/fixtures/packagesScoped/example-package",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link",
    Object {
      "cwd": "test/fixtures/packagesScoped/example-package-b",
      "errorLogLevel": "info",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install",
    Object {
      "cwd": "test/fixtures/packagesScoped/example-package-b",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn install",
    Object {
      "cwd": ".",
      "logLevel": "trace",
    },
  ],
  Array [
    "yarn link @guigrpa/example-package",
    Object {
      "cwd": "test/fixtures/packagesScoped/example-package-b",
      "logLevel": "trace",
    },
  ],
]
`;
